--- a/01/index.html
+++ b/01/index.html
@@ -53,7 +53,7 @@
                         <li><a href="contact.html">Contact</a></li>
 
 
-                        <li class="social-icons ml-lg-3"><a href="https://www.facebook.com/WASHthesystem/" class="p-0 social-icon"><span class="fa fa-facebook-official" aria-hidden="true"></span>
+                        <li class="social-icons ml-lg-3"><a href="https://www.facebook.com/WASHthesystem/" class="p-0 social-icon"><img src="pic_trulli.jpg" alt="Trulli" width="500" height="333"></span>
                                 <div class="tooltip">Facebook</div>
                             </a> </li>
                         <li class="social-icons"><a href="https://twitter.com/hashtag/sexualharassment" class="p-0 social-icon"><span class="fa fa-twitter" aria-hidden="true"></span>
