--- a/01/index.html
+++ b/01/index.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Pro Campaign Against Harassment</title>
+    <title>Equal Rights Campaign</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Pro Campaign Against Harassment, Online Safety, Procampaignagainstharassment" />
+    <meta name="keywords" content="Equal Rights Campaign, Online Safety, EqualRightsCampaign" />
     <script>
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -110,7 +110,7 @@
             </div>
             <!-- banner-hny-info -->
             <div class="banner-hny-info">
-                <h3>Pro Campaign Against Harassment</h3>
+                <h3>Equal Rights Campaign</h3>
                 <div class="top-buttons mx-auto text-center mt-md-5 mt-3">
                     <a href="register.html" class="btn more mr-2">Register</a>
                     <a href="login.html" class="btn">Login</a>
@@ -150,7 +150,7 @@
         <div class="container p-md-5">
             <div class="about-hny-info text-left px-md-5">
                 <h3 class="tittle-w3ls mb-3"><span class="pink">About</span> Us</h3>
-                <p class="sub-tittle mt-3 mb-4">Pro Campaign Against Harassment is an unprecedented public safety resource that provides the public with access to sex offender's data nationwide. A partnership between North America, South America, Asia, Europe, Africa, and Australia
+                <p class="sub-tittle mt-3 mb-4">Equal Rights Campaign is an unprecedented public safety resource that provides the public with access to sex offender's data nationwide. A partnership between North America, South America, Asia, Europe, Africa, and Australia
                     Department of Justice and state, territorial, and tribal governments, working together for the safety of Women and LGBTQ Community.</p>
                 <a class="btn more black" href="#services" role="button">Read More</a>
             </div>
@@ -184,7 +184,7 @@
                         </div>
                         <div class="col-md-9 featured_grid_right_info pl-lg-0">
                             <h4>Global Safety Service</h4>
-                            <p>Pro Campaign Against Harassment also advises, before you engage deeper in a new relationship, make a request for a criminal background verification of the person you choose to meet. It is a matter of caution rather than mistrust.
+                            <p>Equal Rights Campaign also advises, before you engage deeper in a new relationship, make a request for a criminal background verification of the person you choose to meet. It is a matter of caution rather than mistrust.
                                 Take the necessary precautions and avoid bad surprises.</p>
                         </div>
                     </div>
@@ -353,7 +353,7 @@
         <div class="container">
             <div class="row d-flex">
                 <div class="col-lg-9 copy_w3pvt">
-                    <p class="text-lg-left text-center">© 2021 Pro Campaign Against Harassment. | All rights reserved</p>
+                    <p class="text-lg-left text-center">© 2021 Equal Rights Campaign. | All rights reserved</p>
 
                 </div>
                 <!-- move top -->
