--- a/01/index.html
+++ b/01/index.html
@@ -207,7 +207,7 @@
                     <div class="row features-hny-inner-gd">
                         <div class="col-md-3 featured_grid_left">
                             <div class="icon_left_grid">
-                                <<img src="https://img.icons8.com/bubbles/50/ffffff/owner-male.png"/></span>
+                                <img src="https://img.icons8.com/bubbles/50/ffffff/owner-male.png"/></span>
                             </div>
                         </div>
                         <div class="col-md-9 featured_grid_right_info pl-lg-0">
