--- a/01/validate.html
+++ b/01/validate.html
@@ -54,13 +54,13 @@
                             <li><a href="contact.html">Contact</a></li>
 
 
-                            <li class="social-icons ml-lg-3"><a href="https://www.facebook.com/WASHthesystem/" class="p-0 social-icon"><span class="fa fa-facebook-official" aria-hidden="true"></span>
+                            <li class="social-icons ml-lg-3"><a href="https://www.facebook.com/WASHthesystem/" class="p-0 social-icon"><img src="https://img.icons8.com/android/15/ffffff/facebook-new.png"/></span>
                                 <div class="tooltip">Facebook</div>
                             </a> </li>
-                            <li class="social-icons"><a href="https://twitter.com/hashtag/sexualharassment" class="p-0 social-icon"><span class="fa fa-twitter" aria-hidden="true"></span>
+                        <li class="social-icons"><a href="https://twitter.com/hashtag/sexualharassment" class="p-0 social-icon"><img src="https://img.icons8.com/android/15/ffffff/twitter.png"/></span>
                                 <div class="tooltip">Twitter</div>
                             </a> </li>
-                            <li class="social-icons"><a href="https://www.instagram.com/explore/tags/sexualharassment/" class="p-0 social-icon"><span class="fa fa-instagram" aria-hidden="true"></span>
+                        <li class="social-icons"><a href="https://www.instagram.com/explore/tags/sexualharassment/" class="p-0 social-icon"><img src="https://img.icons8.com/material-sharp/15/ffffff/instagram-new.png"/></span>
                                 <div class="tooltip">Instagram</div>
                             </a> </li>
                         </ul>
