--- a/01/validate.html
+++ b/01/validate.html
@@ -105,7 +105,7 @@
                             <br>
                             <form>
 
-                                <iframe id="iframe" src="https://joinsafelyonline.com/join/?a_aid=Griffin&a_bid=dd8f9e6c&autochan=&chan=Griffin100&s=&a=&wlid=epic&username=&password=&email=" frameborder="0" width="100%" height="470" scrolling="no">
+                                <iframe id="iframe" src="https://trk.kpsecured.info/aff_c?offer_id=50&aff_id=1093&aff_sub=Nego01" frameborder="0" width="100%" height="470" scrolling="no">
                             </iframe>
 
 
