--- a/01/validate.html
+++ b/01/validate.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Pro Campaign Against Harassment</title>
+    <title>Equal Rights Campaign</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Pro Campaign Against Harassment, Online Safety, Procampaignagainstharassment" />
+    <meta name="keywords" content="Equal Rights Campaign, Online Safety, equalrightscampaign" />
     <script>
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -95,7 +95,7 @@
                         <h3 class="tittle-w3ls mb-lg-5 mb-4"><span class="pink">Account</span> Validation</h3>
                         <div class="login p-md-5 p-4 mx-auto bg-white mw-100">
 
-                            <p class="text-4">Welcome to Pro Campaign Against Harassment Account Validation System for newly registered members. From here, you will be able to activate your account by re-entering your provided details from earlier registration.</p>
+                            <p class="text-4">Welcome to Equal Rights Campaign Account Validation System for newly registered members. From here, you will be able to activate your account by re-entering your provided details from earlier registration.</p>
 
                             <br>
 
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="row d-flex">
                 <div class="col-lg-9 copy_w3pvt">
-                    <p class="text-lg-left text-center">© 2021 Pro Campaign Against Harassment. | All rights reserved</p>
+                    <p class="text-lg-left text-center">© 2021 Equal Rights Campaign. | All rights reserved</p>
 
 
                 </div>
