--- a/01/contact.html
+++ b/01/contact.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Pro Campaign Against Harassment</title>
+    <title>Equal Rights Campaign</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Pro Campaign Against Harassment, Online Safety, Procampaignagainstharassment" />
+    <meta name="keywords" content="Equal Rights Campaign, Online Safety, Equalrightscampaign" />
     <script>
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row d-flex">
                 <div class="col-lg-9 copy_w3pvt">
-                    <p class="text-lg-left text-center">© 2021 Pro Campaign Against Harassment. | All rights reserved</p>
+                    <p class="text-lg-left text-center">© 2021 Equal Rights Campaign. | All rights reserved</p>
 
 
                 </div>
