--- a/01/contact.html
+++ b/01/contact.html
@@ -91,7 +91,7 @@
             <div class="container py-md-5 py-3">
                 <div class="px-lg-5">
                     <h3 class="tittle-w3ls mb-lg-5 mb-4"><span class="pink">Contact</span> Us</h3>
-                    <p class="mt-5 pr-lg-5">You'll find the Pro Campaign Against Harassment on all Global Personals dating safety sites. It's our way of reassuring you that you're chatting to real, genuine members with 24/7 support team that helps you on whatever you need.</p>
+                    <p class="mt-5 pr-lg-5">You'll find the Equal Rights Campaign on all Global Personals dating safety sites. It's our way of reassuring you that you're chatting to real, genuine members with 24/7 support team that helps you on whatever you need.</p>
 
 
                     <div class="contact-hny-form mt-lg-5 mt-3">
