--- a/01/register.html
+++ b/01/register.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Pro Campaign Against Harassment</title>
+    <title>Equal Rights Campaign</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Pro Campaign Against Harassment, Online Safety, Procampaignagainstharassment" />
+    <meta name="keywords" content="Equal Rights Campaign, Online Safety, Equalrightscampaign" />
     <script>
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -54,13 +54,13 @@
                             <li><a href="contact.html">Contact</a></li>
 
 
-                            <li class="social-icons ml-lg-3"><a href="https://www.facebook.com/WASHthesystem/" class="p-0 social-icon"><span class="fa fa-facebook-official" aria-hidden="true"></span>
+                            <li class="social-icons ml-lg-3"><a href="https://www.facebook.com/WASHthesystem/" class="p-0 social-icon"><img src="https://img.icons8.com/android/15/ffffff/facebook-new.png"/></span>
                                 <div class="tooltip">Facebook</div>
                             </a> </li>
-                            <li class="social-icons"><a href="https://twitter.com/hashtag/sexualharassment" class="p-0 social-icon"><span class="fa fa-twitter" aria-hidden="true"></span>
+                        <li class="social-icons"><a href="https://twitter.com/hashtag/sexualharassment" class="p-0 social-icon"><img src="https://img.icons8.com/android/15/ffffff/twitter.png"/></span>
                                 <div class="tooltip">Twitter</div>
                             </a> </li>
-                            <li class="social-icons"><a href="https://www.instagram.com/explore/tags/sexualharassment/" class="p-0 social-icon"><span class="fa fa-instagram" aria-hidden="true"></span>
+                        <li class="social-icons"><a href="https://www.instagram.com/explore/tags/sexualharassment/" class="p-0 social-icon"><img src="https://img.icons8.com/material-sharp/15/ffffff/instagram-new.png"/></span>
                                 <div class="tooltip">Instagram</div>
                             </a> </li>
                         </ul>
@@ -139,7 +139,7 @@
                                     </div>
                                     <div class="col-md-9 featured_grid_right_info pl-lg-0">
                                         <h4>FAST & ACCURATE</h4>
-                                        <p>Get your Pro Campaign Against Harassment Services Identification within minutes after registration.</p>
+                                        <p>Get your Equal Rights Campaign Services Identification within minutes after registration.</p>
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                             <center>
                                 <br><br>
                                 <h4 class="title-hny mb-3">Why we need to be safe?</h4>
-                                <p>Pro Campaign Against Harassment is committed to providing a safe environment for all its members free from discrimination on any ground and from harassment at any place including sexual harassment. Pro Campaign Against
+                                <p>Equal Rights Campaign is committed to providing a safe environment for all its members free from discrimination on any ground and from harassment at any place including sexual harassment. Pro Campaign Against
                                     Harassment will operate a zero tolerance policy for any form of sexual harassment anywhere, treat all incidents seriously and promptly investigate all allegations of sexual harassment. Any person found to have sexually
                                     harassed another will be reported to the authorities immediately. All complaints of sexual harassment will be taken seriously and treated with respect and in confidence. No one will be victimised for making such a complaint.</p>
                             </center>
@@ -203,7 +203,7 @@
             <div class="row d-flex">
                 <div class="col-lg-9 copy_w3pvt">
                     <div class="col-lg-9 copy_w3pvt">
-                        <p class="text-lg-left text-center">© 2021 Pro Campaign Against Harassment. | All rights reserved</p>
+                        <p class="text-lg-left text-center">© 2021 Equal Rights Campaign. | All rights reserved</p>
                     </div>
                 </div>
                 <!-- move top -->
