--- a/01/contact.html
+++ b/01/contact.html
@@ -148,7 +148,7 @@
                 <!-- move top -->
                 <div class="col-lg-3 move-top text-lg-right text-center">
                     <a href="#home" class="move-top">
-                        <span class="fa fa-angle-double-up mt-3" aria-hidden="true"></span>
+                        <img src="https://img.icons8.com/android/15/ffffff/up.png"/></span>
                     </a>
                 </div>
                 <!-- move top -->
