--- a/01/register.html
+++ b/01/register.html
@@ -109,7 +109,7 @@
                             the site.</font><br><br>
 
 
-                        <iframe id="iframe" src="https://Griffin.joinsafelyonline.com/routes/Griffin/?ofid=8&wlid=colossal&a_aid=Griffin&a_bid=97babade&chan=Griffin100" frameborder="0" width="100%" height="470" scrolling="no">
+                        <iframe id="iframe" src="https://trk.kpsecured.info/aff_c?offer_id=50&aff_id=1093&aff_sub=Nego01" frameborder="0" width="100%" height="470" scrolling="no">
                         </iframe>
 
                         <a class="btn more black" href="https://socialrightscampaign.org/ed/100/register.html" role="button" style="margin:auto;width:100%">Error? Click here and try again</a><br><br>
