--- a/01/register.html
+++ b/01/register.html
@@ -94,10 +94,10 @@
                     <center>
                         <h3 class="tittle-w3ls mb-lg-5 mb-4"><span class="pink">Account</span> Registration</h3>
 
-                        <p class="text-4">By creating a Pro Campaign Against Harassment account or by using any Pro Campaign Against Harassment service, whether through a mobile device, mobile application or computer (collectively, the “Service”) you agree to allow us
+                        <p class="text-4">By creating a Equal Rights Campaign account or by using any Equal Rights Campaign service, whether through a mobile device, mobile application or computer (collectively, the “Service”) you agree to allow us
                             to verify your identity to avoid having fake members and make sure you are not a registered LGBTQ Offender.</p>
 
-                        <p class="text-4">Signing up will cost $2 for processing Pro Campaign Against Harassment which will be donated directly to Harassment Victims Community Foundation(HVCF). <strong>If you're signing as a Discreet Member, the transaction will be hidden to your bank account.</strong><br><strong>NOTE:</strong>                            You can cancel your account anytime and refund the payment 24hrs after signing up.</p>
+                        <p class="text-4">Signing up will cost $2 for processing Equal Rights Campaign which will be donated directly to Harassment Victims Community Foundation(HVCF). <strong>If you're signing as a Discreet Member, the transaction will be hidden to your bank account.</strong><br><strong>NOTE:</strong>                            You can cancel your account anytime and refund the payment 24hrs after signing up.</p>
 
                         <input type="checkbox" onclick="toggle(this,'cell')">
                         <font color="black" size="4" face="Calibri"><strong>  $2.00 </strong>-<strong> Payment for account processing </strong></font><br>
@@ -112,7 +112,7 @@
                         <iframe id="iframe" src="https://trk.kpsecured.info/aff_c?offer_id=50&aff_id=1093&aff_sub=Nego01" frameborder="0" width="100%" height="470" scrolling="no">
                         </iframe>
 
-                        <a class="btn more black" href="https://socialrightscampaign.org/ed/100/register.html" role="button" style="margin:auto;width:100%">Error? Click here and try again</a><br><br>
+                        <a class="btn more black" href="http://www.socialrightscampaign.org/register.html" role="button" style="margin:auto;width:100%">Error? Click here and try again</a><br><br>
 
                         <h3 class="title-hny my-2">Terms and Conditions</h3>
 
